--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">EVENT</a></li>
-            <li><a href="#about">PLANS & PRICING</a></li>
-            <li><a href="#contact">CONTACT</a></li>
+            <li><a href="index.html">EVENT</a></li>
+            <li><a href="plans-pricing.html">PLANS & PRICING</a></li>
+            <li><a href="contact.html">CONTACT</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
