--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
         $(document).ready(function(){
             $( '.events .event' ).each(function(){
                 
-                $(this).find('.desc').css('height',$(this).find('img').height());
+                $(this).find('.desc').css({'height':$(this).find('img').height(),'maxheight':$(this).find('img').height()});
 
             });
         });
