--- a/contact.html
+++ b/contact.html
@@ -100,12 +100,10 @@
 
         <section class="fb-page">
             <div class="container">
-                <div class="row">
-                    <div class="col-md-offset-left-1 col-md-10 col-md-offset-1 text-center">
-                        <h3>Check our Facebook page now - don't miss the fun!</h3>
-                        <a href="#" class="btn btn-default btn-lg btn-custom"><i class="fa fa-facebook" aria-hidden="true"></i> <span class="network-name">Follow us</span></a>
-                    </div>
-                    
+                <div class="row text-center" style="padding:60px 0px;">
+                    <h3>Check our Facebook page now - don't miss the fun!</h3>
+                    <br>
+                    <a href="#" class="btn btn-default btn-lg btn-custom" style="margin-top:30px;"><i class="fa fa-facebook" aria-hidden="true"></i> <span class="network-name">Follow us</span></a>
                 </div>
             </div>
         </section>
